2012-01-12 18:18-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLElement.m
	* Source/NSXMLNode.m: Add code to automatically instantiate 
	the node to fill in the _private pointer if it is not present.

2012-01-12 12:05-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLElement.m: Changes to make NSXMLElement use
	libxml2 structures.

2012-01-11 12:54-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Get final methods implemented on NSXMLNode
	except for XPath/XQuery methods.

2012-01-10 20:21-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: Added forward declarations for private
	methods on NSXMLNode.

2012-01-10 20:05-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Changes to move NSXML classes to using libxml 
	more directly.

2012-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Remove cached paths when the owning bundle is
	deallocated.  Use cache to determine which resource directories to
	search.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Crude/simple caching of directory contents to
	test impact on theme loading ... needs reverting or improving.

2012-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.m:
	* Source/NSSocketPort.m:
	* Source/unix/NSStream.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSZone.m:
	* Source/NSMessagePort.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSInvocation.m:
	* Source/NSURLProtocol.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSXML.m:
	* Source/NSData.m:
	* Source/GSAvahiNetService.m:
	* Source/NSTextCheckingResult.m:
	Use PRIdPTR and PRIuPTR rather than ld and lu for printf formatting
	of NSInteger and NSUInteger values.

2012-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/ObjectiveC2/objc/capabilities.h:
	* Headers/ObjectiveC2/objc/Availability.h:
	* Headers/ObjectiveC2/objc/blocks_runtime.h: