@@ -111,7 +111,7 @@ StringFromXMLString(const unsigned char *bytes, unsigned length)
   NSUInteger      options; \
   void           *node;  \
   NSMutableArray *subNodes; \
-
+  NSString       *xpath; \
 
 /* When using the non-fragile ABI, the instance variables are exposed to the
  * compiler within the class declaration, so we don't need to incorporate
