@@ -1,3 +1,8 @@
+2012-01-15 10:48-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSXMLNode.m
+	* Source/NSXMLPrivate.h: Implement XPath query.
+
 2012-01-12 18:18-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSXMLElement.m
